Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23773

Creator crashes on macOS when selecting icon to Picture component

    XMLWordPrintable

Details

    • macOS
    • 99cd623fa7b9d57c78c9b59d37bc7e12f74bbd34 (qt-creator/qt-creator/4.12)

    Description

      Tested with Qt 5.14.1, install binaries and QtCreator, launch Creator:

      • Projects - New - e.g. 'Qt Quick Application - Empty' - click through the wizard
      • Go to Design - Imports - Add import Qt.Quick Extras
      • Go to QML Types tab - drag the 'Picture' to the canvas on right
      • On top of the Picture item, open menu with mouse right click - Choose Icon - select any icon and click OK -> Creator crashes (see output in attachment)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes